fix images position on mobile width

--- a/src/less/blocks/hero.less
+++ b/src/less/blocks/hero.less
@@ -11,7 +11,7 @@
     color: @white;
     font-size: 50px;
     letter-spacing: -5px;
-    transform: skewX(-45deg) translateX(250px);
+    transform: skewX(-45deg) translateX(350px);
     transition: 0.6s;
 
     @media (max-width: @mobile-only) {
