--- a/src/less/blocks/section.less
+++ b/src/less/blocks/section.less
@@ -9,7 +9,7 @@
 
   @media (max-width: @mobile-only) {
     grid-template-columns: 1fr;
-    padding: 100px 40px;
+    padding: 100px 0;
     direction: ltr;
   }
 
@@ -22,10 +22,11 @@
 
   &__text-wrapper {
     display: flex;
+    padding: 0 40px;
     flex-direction: column;
     align-items: flex-start;
     transform: translateX(1000px);
-    transition: 0.4s;
+    transition: 0.8s;
   }
 
   &__title {
